@@ -1,3 +1,7 @@
+2011-10-28  Valek Filippov
+
+		* Add short manual.
+
 2011-10-26  Valek Filippov
 
 		* Add command history (arrow up/down to navigate)
